SBRC-004 finalised unit tests.